--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@napi-rs/canvas": "^0.1.69",
     "canvas": "^3.1.0",
     "discord.js": "^14.18.0",
+    "dotenv": "^16.5.0",
     "lodash": "^4.17.21"
   }
 }
