--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "canvas": "^3.1.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.5.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "pg": "^8.16.0"
   }
 }
